[gd_scene load_steps=21 format=3 uid="uid://kkgv8a5ms0gl"]

[ext_resource type="Script" uid="uid://cxy3w3kinv2vk" path="res://scenes/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c7f87uc6ny2qj" path="res://backgrounddepththing.tscn" id="2_dinhu"]
[ext_resource type="PackedScene" uid="uid://ceg7hqt3r12vm" path="res://scenes/foodmenu.tscn" id="2_trtic"]
[ext_resource type="PackedScene" uid="uid://dvodq6q5qc8k" path="res://scenes/menu.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bhi86uf0ju714" path="res://scenes/textbox.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://ynmfrkjnnm6r" path="res://the-wheel-godot/wheel.tscn" id="6_p57ef"]
[ext_resource type="FontFile" uid="uid://d3j6a31vfsb2" path="res://fonts/Born2bSportyV10.ttf" id="7_gee14"]
[ext_resource type="Texture2D" uid="uid://byqcuv5ypw86i" path="res://sprites/button.png" id="8_0tnpc"]
[ext_resource type="Texture2D" uid="uid://dejkr4rhf8q1k" path="res://sprites/buckyentrance.png" id="10_kvpfn"]
[ext_resource type="Texture2D" uid="uid://cpqgjs2rxbiin" path="res://sprites/entranceoverlay.png" id="11_dinhu"]

[sub_resource type="Animation" id="Animation_u5sy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:wheel_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.210224),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(442, 179)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buckyentrance:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(581, -90)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Buckyentrance:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Buckyentrance/Entranceoverlay:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Buckyentrance:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kvuet"]
resource_name = "buckee"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Buckyentrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(0.170755, 0.170755, 12.5533, 12.5533),
"update": 0,
"values": [Vector2(581, 533), Vector2(581, 450), Vector2(581, 450), Vector2(581, 778)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Buckyentrance:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1e+06, 1e+06),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buckyentrance/Entranceoverlay:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.00107, 2.5),
"transitions": PackedFloat32Array(0.170755, 0.170755, 0.757859, 0.757859),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Buckyentrance:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p57ef"]
resource_name = "weel on"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.000998438, 0.5),
"transitions": PackedFloat32Array(1, 0.210224, 0.210224),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.537311, 0.537311), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gee14"]
resource_name = "wheeldown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.164939, 0.164939),
"update": 0,
"values": [Vector2(442, 179), Vector2(442, 371)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.164939, 0.164939),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kvpfn"]
resource_name = "wheelfadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.196146, 0.196146),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5sy4"]
_data = {
&"RESET": SubResource("Animation_u5sy4"),
&"buckee": SubResource("Animation_kvuet"),
&"weel on": SubResource("Animation_p57ef"),
&"wheeldown": SubResource("Animation_gee14"),
&"wheelfadeout": SubResource("Animation_kvpfn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvpfn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kvpfn"]
texture = ExtResource("8_0tnpc")
modulate_color = Color(0.839433, 0.839433, 0.839433, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dinhu"]
texture = ExtResource("8_0tnpc")
modulate_color = Color(0.554309, 0.554309, 0.554309, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vtaks"]
texture = ExtResource("8_0tnpc")

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Environment" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_dinhu")]

[node name="Current Dialogue" type="TextEdit" parent="."]
visible = false
offset_left = 3.0
offset_top = 116.0
offset_right = 252.0
offset_bottom = 289.0

[node name="Textbox" parent="." instance=ExtResource("5_iywne")]

[node name="Wheel" parent="." instance=ExtResource("6_p57ef")]
modulate = Color(1, 1, 1, 0)
offset_left = 442.0
offset_top = 179.0
offset_right = 742.0
offset_bottom = 479.0
scale = Vector2(0.5, 0.5)
wheel_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wheel"]
libraries = {
&"": SubResource("AnimationLibrary_u5sy4")
}

[node name="foodmenu" parent="." instance=ExtResource("2_trtic")]
visible = false

[node name="tutorial" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = 321.0
offset_top = 170.0
offset_right = 861.0
offset_bottom = 225.0
theme_override_fonts/font = ExtResource("7_gee14")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvpfn")
theme_override_styles/hover = SubResource("StyleBoxTexture_kvpfn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dinhu")
theme_override_styles/normal = SubResource("StyleBoxTexture_vtaks")
text = "Please teach me, teacher"

[node name="notutorial" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = 321.0
offset_top = 247.0
offset_right = 861.0
offset_bottom = 302.0
theme_override_fonts/font = ExtResource("7_gee14")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_kvpfn")
theme_override_styles/hover = SubResource("StyleBoxTexture_kvpfn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dinhu")
theme_override_styles/normal = SubResource("StyleBoxTexture_vtaks")
text = "I got this vro"

[node name="Buckyentrance" type="Sprite2D" parent="."]
position = Vector2(581, -90)
texture = ExtResource("10_kvpfn")

[node name="Entranceoverlay" type="Sprite2D" parent="Buckyentrance"]
texture = ExtResource("11_dinhu")

[node name="menu" parent="." instance=ExtResource("3_lnu2h")]

[connection signal="spritechange" from="Textbox" to="SubViewportContainer/SubViewport/Environment" method="_on_textbox_spritechange"]
[connection signal="pressed" from="tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="notutorial" to="." method="_on_notutorial_pressed"]
[connection signal="game_start" from="menu" to="." method="_on_menu_game_start"]
